--- a/ProAcc/Views/ProjectMonitor/Monitor.cshtml
+++ b/ProAcc/Views/ProjectMonitor/Monitor.cshtml
@@ -4,6 +4,13 @@
         color: black
     }
 
+    a#sData {
+        background: #808080;
+    }
+
+    a#cData {
+        background: #808080;
+    }
     .ui-jqdialog-content input.FormElement {
     border:2px solid #ccc !important
     }
