--- a/ProAcc/Views/Resource/ResourceAllocationAll.cshtml
+++ b/ProAcc/Views/Resource/ResourceAllocationAll.cshtml
@@ -27,6 +27,15 @@
     .app-main__inner{
         width:99%;
     }
+     a#sData {
+        background: #808080;
+    }
+    a#cData {
+        background: #808080;
+    }
+    label{
+        color:black
+    }
 </style>
 <div>
     <table id="jqGrid"></table>
