--- a/ProAcc/Views/Shared/_Layout.cshtml
+++ b/ProAcc/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
     @Styles.Render("~/Content/css/Layout")
     @Scripts.Render("~/bundles/Scripts/Layout")
     @Scripts.Render("~/bundles/Scripts/jquery-ui")
+    @Scripts.Render("~/bundles/Scripts/select2")
     <link href="~/Asset/css/jquery-confirm.min.css" rel="stylesheet" />
     <link href="~/Asset/css/jquery-confirm.less" rel="stylesheet/less" />
 
